# email-sdk

./: .gitignore  Cargo.toml  README.md
crates/email-sdk/: Cargo.toml
crates/email-sdk-core/: Cargo.toml
crates/email-sdk-core/src/: client.rs  errors.rs  hooks.rs  lib.rs  message.rs  middleware.rs  plugin.rs  provider.rs  retry.rs  utils.rs  validation.rs
crates/email-sdk/src/: lib.rs
crates/email-sdk/src/providers/brevo/: provider.rs
crates/email-sdk/src/providers/cloudflare/: provider.rs
crates/email-sdk/src/providers/iterable/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/jetemail/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/lettermint/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/loops/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/mailchimp/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/mailersend/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/mailgun/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/mailpace/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/mailtrap/: payload.rs  provider.rs
crates/email-sdk/src/providers/plunk/: provider.rs
crates/email-sdk/src/providers/postmark/: payload.rs  provider.rs
crates/email-sdk/src/providers/primitive/: mod.rs  provider.rs
crates/email-sdk/src/providers/resend/: mod.rs  provider.rs
crates/email-sdk/src/providers/scaleway/: payload.rs  provider.rs
crates/email-sdk/src/providers/sendgrid/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/sequenzy/: provider.rs
crates/email-sdk/src/providers/ses/: payload.rs  provider.rs
crates/email-sdk/src/providers/smtp/: mod.rs
crates/email-sdk/src/providers/sparkpost/: provider.rs
crates/email-sdk/src/providers/unosend/: mod.rs  payload.rs  provider.rs
crates/email-sdk/src/providers/zeptomail/: mod.rs  payload.rs  provider.rs
crates/providers/brevo/: Cargo.toml
crates/providers/brevo/src/: lib.rs  payload.rs  provider.rs
crates/providers/cloudflare/: Cargo.toml
crates/providers/cloudflare/src/: lib.rs  payload.rs  provider.rs
crates/providers/iterable/: Cargo.toml
crates/providers/iterable/src/: provider.rs
crates/providers/jetemail/: Cargo.toml
crates/providers/jetemail/src/: provider.rs
crates/providers/lettermint/: Cargo.toml
crates/providers/lettermint/src/: provider.rs
crates/providers/loops/: Cargo.toml
crates/providers/loops/src/: provider.rs
crates/providers/mailchimp/: Cargo.toml
crates/providers/mailchimp/src/: provider.rs
crates/providers/mailersend/: Cargo.toml
crates/providers/mailersend/src/: provider.rs
crates/providers/mailgun/: Cargo.toml
crates/providers/mailgun/src/: provider.rs
crates/providers/mailpace/: Cargo.toml
crates/providers/mailpace/src/: provider.rs
crates/providers/mailtrap/: Cargo.toml
crates/providers/mailtrap/src/: lib.rs  provider.rs
crates/providers/memory/: Cargo.toml
crates/providers/memory/src/: lib.rs
crates/providers/plunk/: Cargo.toml
crates/providers/plunk/src/: lib.rs  payload.rs  provider.rs
crates/providers/postmark/: Cargo.toml
crates/providers/postmark/src/: lib.rs  provider.rs
crates/providers/primitive/: Cargo.toml
crates/providers/primitive/src/: payload.rs  provider.rs
crates/providers/resend/: Cargo.toml
crates/providers/resend/src/: payload.rs  provider.rs
crates/providers/scaleway/: Cargo.toml
crates/providers/scaleway/src/: lib.rs  provider.rs
crates/providers/sendgrid/: Cargo.toml
crates/providers/sendgrid/src/: provider.rs
crates/providers/sequenzy/: Cargo.toml
crates/providers/sequenzy/src/: lib.rs  payload.rs  provider.rs
crates/providers/ses/: Cargo.toml
crates/providers/ses/src/: lib.rs  provider.rs  signing.rs
crates/providers/smtp/: Cargo.toml
crates/providers/sparkpost/: Cargo.toml
crates/providers/sparkpost/src/: lib.rs  payload.rs  provider.rs
crates/providers/unosend/: Cargo.toml
crates/providers/unosend/src/: provider.rs
crates/providers/zeptomail/: Cargo.toml
crates/providers/zeptomail/src/: provider.rs
