[package]
name = "email-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust email SDK with client, plugins, retries, fallbacks, SMTP, and all provider integrations."

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
email-sdk-core = { version = "0.1.0", path = "../email-sdk-core" }
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-native-tls.workspace = true
