[package]
name = "email-sdk-provider-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "In-memory email-sdk provider for tests and local development."

[dependencies]
async-trait.workspace = true
email-sdk-core = { version = "0.1.0", path = "../../email-sdk-core" }
tokio.workspace = true
